--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                             <li class=""><a style="font-size: inherit; "
                                     href="https://www.facebook.com/Iraqi01012469934" target="_blank"
                                     class="text-medium-gray text-small"><i class="fab fa-facebook-f"
-                                        style="color: #fff; margin-left: 3rem;"></i></a></li>
+                                        style="color: #fff; margin-left: 30px;"></i></a></li>
                             <!-- <li class="w-50 float-left"><a href="https://www.pinterest.com/" target="_blank" class="text-medium-gray text-small">Pinterest</a></li>
                                 <li class="w-50 float-left"><a href="https://www.twitter.com/" target="_blank" class="text-medium-gray text-small">Twitter</a></li>
                                 <li class="w-50 float-left"><a href="https://www.linkedin.com/" target="_blank" class="text-medium-gray text-small">Linkedin</a></li>
